bfg-main/bfg-ui/src/styles.scss
/* You can add global styles to this file, and also import other style files */
@import "~ng-pick-datetime/assets/style/picker.min.css";

html,
body {
    height: 100%;
}

body {
    margin: 0;
    font-family: Roboto, "Helvetica Neue", sans-serif;
}

.mat-tab-body-wrapper {
    max-height: 50vh;
}

.mat-footer-row[hidden] {
    display: none !important;
}

.mat-stepper-horizontal {
    .mat-step-label {
        white-space: normal;
    }
}

mat-form-field {
    &.ng-valid {
        .mat-form-field-wrapper {
            padding-bottom: 1.25em;
        }
    }

    &.ng-invalid,
    &.mat-form-field-invalid {
        .mat-form-field-wrapper {
            padding-bottom: 7px;
        }
    }

    &.ng-untouched {
        .mat-form-field-wrapper {
            padding-bottom: 1.25em;
        }
    }

    .mat-form-field {
        &-underline {
            position: static;
        }

        &-subscript-wrapper {
            position: static;
        }
    }
}

.mat-table {

    .mat-header-cell,
    .mat-cell,
    .mat-cell>.mat-button {
        word-break: break-all;
        word-wrap: break-word;
        white-space: normal;
        hyphens: auto;
        -ms-hyphens: auto;
        -moz-hyphens: auto;
        -webkit-hyphens: auto;
        line-height: normal;
        text-align: left;
        min-width: 10px;
    }

    .mat-cell>.mat-button {
        padding: 0;
    }
}

@media all and (-ms-high-contrast: none),
(-ms-high-contrast: active) {

    /* IE10+ CSS styles go here */
    .mat-header-row,
    .mat-row {
        -ms-flex-align: stretch;
        -ms-flex-pack: center;
        justify-content: center;
    }
}

